<resources>
    <string name="app_name">Формуляр - Logos</string>
    <string name="text_share">Поделиться</string>
    <string name="loading">Загрузка...</string>
    <string name="text_settings">Настройки</string>
    <string name="text_downloaded">Загруженные</string>
    <string name="text_download">Скачать</string>
    <string name="author">Разработал Бударный Даниил</string>
    <string name="text_search">Поиск</string>
    <string name="text_main">Главная</string>
    <string name="hint_search">Введите название темы</string>
    <string name="title_activity_new_design_main">NewDesignMainActivity</string>
    <string name="loadingArticles">Загружаем записи</string>
    <string name="articlesLoadSuccess">Приятного чтения =)</string>
    <string name="articlesLoadFail">Проверьте подключение к сети</string>
    <string name="action_share">Поделиться</string>
    <string name="action_delete">Удалить</string>
    <string name="download_error_not_supported">Данную страницу невозможно загрузить</string>
    <string name="action_download">Скачать</string>
    <string name="deeplink_prefix">/posts/</string>
    <string name="nextpage_loading">Загружаю следующую страницу...</string>
    <string name="cache_update">Обновляю кэш записи</string>
    <string name="cache_uptodate">Уже сохранена последняя версия</string>
    <string name="error_load">Ошибка загрузки</string>
    <string name="deeplink_host">sanctumlogos.info</string>
    <string name="quiz_title_placeholder">ТЕКСТ ВОПРОСА</string>
    <string name="channel_name">Уведомления о загрузке</string>
    <string name="channel_description">Этот параметр управляет видимостью уведомлений о загруженных материалах.</string>
    <string name="undo_string">Отменить</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="reading_header">Чтение и просмотр</string>
    <string name="text_size">Размер текста</string>
    <string name="theme_update_action_toast">Обновляю страницу</string>
    <string name="auto_download_summary_off">Страницы будут загружены только после нажатия на кнопку загрузки.</string>
    <string name="auto_download_summary_on">Все открываемые страницы будут загружаться.</string>
    <string name="auto_download_title">Автозагрузка открываемых страниц</string>
    <string name="notifications_header">Уведомления</string>
    <string name="notifications_summary_off">Уведомления не будут показываться</string>
    <string name="notifications_summary_on">Уведомления будут показываться.</string>
    <string name="notifications_title">Показывать уведомления о загрузке</string>
    <string name="string_about">О проекте</string>
    <string name="update">Обновить страницу</string>
</resources>
