<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_downloaded"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/round_get_app_24"
        android:title="@string/text_downloaded"></item>


    <item
        android:id="@+id/action_main"
        android:title="@string/text_main"
        android:icon="@drawable/round_home_24"
        android:enabled="true"
        app:showAsAction="ifRoom"
        ></item>


    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/round_search_24"
        android:title="@string/text_search"
        app:showAsAction="ifRoom"></item>




</menu>